--- a/Property FW and wreath products/Medians/Median.tex
+++ b/Property FW and wreath products/Medians/Median.tex
@@ -140,7 +140,7 @@ Finally, we also obtain that $G\wr_XH$ has cof~$\neq\omega$ if and only if both 
 %
 When working with group properties, it is natural to ask if they are stable under ``natural'' group operations. One such operation, of great use in geometric group theory, is the wreath product, which generalizes the direct product of two groups, see Section~\ref{Section:Def} for all the relevant definitions.
 
-In the context of properties defined by fixed points of actions, the first result concerning wreath products is due to Cherix, Martin and Valette and later refined by Neuhauser and concerns property (T).
+In the context of properties defined by fixed points of actions, the first result concerning wreath products, due to Cherix, Martin and Valette and later refined by Neuhauser, concerns property (T).
 %
 %
 \begin{thm}[\cite{Cherix2004,Neuhauser2005a}] \label{T:Wreath_prop_T}
@@ -271,7 +271,7 @@ g & y = x \\
 1 & y \neq x.
 \end{cases}
 \end{equation*}
-A prominent  source of examples of wreath products are the ones of the form $G\wr_HH$, where $H$ acts on itself by left multiplication.
+A prominent source of examples of wreath products is from the ones of the form $G\wr_HH$, where $H$ acts on itself by left multiplication.
 They are sometimes called \emph{standard wreath products} or simply \emph{wreath products}, while general $G\wr_XH$ are sometimes called \emph{permutational wreath products}.
 The probably most well-known example of wreath product is the so called \emph{lamplighter group} $(\Z/2\Z)\wr_\Z\Z$.
 Other (trivial) examples of wreath products are direct products $G\times H$ which correspond to wreath products over a singleton $G\wr_{\{*\}}H$.
@@ -298,13 +298,13 @@ Remind that a metric space $(X,d)$ is \emph{ultrametric} if $d$ satisfies the st
 
 For $u$ and $v$ two vertices of a connected\footnote{We will always assume that our connected graphs are non-empty. This is coherent with the definition that a connected graph is a graph with exactly one connected component.} graph $\mathcal G$, we define the total interval $[u,v]$ as the set of vertices that lie on some shortest path between $u$ and $v$.
 A connected graph $\mathcal G$ is \emph{median} if for any three vertices $u$, $v$, $w$, the intersection $[u,v]\cap[v,w]\cap[u,w]$ consists of a unique vertex, denoted $m(u,v,w)$.
-A graph is \emph{median} if each of its connected component is median. For more on median graphs and spaces see \cite{MR2405677,MR1705337,MR2671183}.
+A graph is \emph{median} if each of its connected component is median. For more on median graphs and spaces see \cite{MR2405677,MR2671183,MR1705337}.
 %
 %
 %
 %
 \paragraph{Some group properties}
-We now remind the definition of various properties for actions on metric spaces.\PH{Peut-être mettre une phrase avec les réf de première fois où ça été étudié. Soit avant la déf, soit dans le paragraphe après}
+We now remind the definition of various properties for actions on metric spaces.\PH{Peut-être mettre une phrase avec les réf de première fois où ça été étudié. Soit avant la déf, soit dans le paragraphe après} \GS{On a mis déjà pas mal de références à mon avis...}
 %
 %
 \begin{defn}\label{Def:FHFA}
@@ -324,7 +324,7 @@ In the above, \emph{actions} are supposed to preserve the structure. In particul
 \end{defn}
 %
 %
-The names FH, FW and FA come from the fact that these properties admit a description in terms of (and were fist studied in the context of) existence of a Fixed point for actions on Hilbert spaces, on spaces with Walls (or equivalently on CAT(0) cube complexes) and on trees (\emph{Arbres} in french).
+The names FH, FW and FA come from the fact that these properties admit a description in terms of (and were fist studied in the context of) the existence of a Fixed point for actions on Hilbert spaces, on spaces with Walls (or equivalently on CAT(0) cube complexes) and on trees (\emph{Arbres} in french).
 On the other hand, SB stands for Strongly Bounded and is also called the \emph{Bergman's property}.
 Finally, a group has cof~$\neq\omega$ (does not have \emph{countable cofinality}) if and only if it cannot be written has a countable increasing union of proper subgroups, see Lemma~\ref{Lemma:CofSub}.
 
@@ -334,7 +334,7 @@ We have the following strict implications between the properties of Definition~\
 \begin{equation}\tag{\dag}\label{EQ:Implications}
 	\textnormal{SB}\implies \textnormal{FH}\implies \textnormal{FW}\implies \textnormal{FA}\implies\textnormal{cof~$\neq\omega$}.
 \end{equation}
-The implications $\textnormal{SB}\implies \textnormal{FH}$ and $\textnormal{FW}\implies \textnormal{FA}$ trivially follows from the fact that Hilbert spaces are metric space and trees that trees are connected median graphs.
+The implications $\textnormal{SB}\implies \textnormal{FH}$ and $\textnormal{FW}\implies \textnormal{FA}$ trivially follow from the fact that Hilbert spaces are metric space and that trees are connected median graphs.
 The implication $\textnormal{FA}\implies\textnormal{cof~}\neq\omega$ is due to Serre \cite{MR0476875}: if $G$ is an increasing union of subgroups $G_i$, then $\bigsqcup G/G_i$ admits a tree structure by joining any $gG_i\in G/G_i$ to $gG_{i+1}\in G/G_{i+1}$. The action of $G$ by multiplication on $\bigsqcup G/G_i$ is by graph isomorphisms and with unbounded orbits.
 Finally, the implication $\textnormal{FH}\implies \textnormal{FW}$ follows from the fact that a group $G$ has property FW if and only if any action on a real Hilbert space which preserves integral points has bounded orbits \cite{Cornulier2013}.
 
@@ -344,9 +344,9 @@ The group $\SL_2(\Z[\sqrt{2}])$ has property FW but not FH, see \cite{MR3299841}
 If $G$ is a non-trivial finite group and $H$ is an infinite group with property FA, then $G\wr_HH$ has property FA by Theorem~\ref{Thm:FAFiniteOrbits}, but does not have property FW by Theorem~\ref{Thm:Main}.
 Finally, $\Z$ has cof~$\neq\omega$, while it acts by translations and with unbounded orbits on the infinite $2$-regular tree.
 
-It is possible to consider relative version of the properties appearing in Definition~\ref{Def:FHFA}.\PH{J'ai mis cela ici, mais on peut y bouger dans la prochaine sous-section.}
-If $G$ is a group, $H$ a subgroup of $G$ and BS the property of Definition~\ref{Def:FHFA} defined by ``every action on S-spaces is bounded'', we say that the pair $(G,H)$ has \emph{relative property BS} if for every $G$ action on a S-space, the $H$ orbits are bounded.
-A group $G$ has property BS if and only if for every subgroup $H$ the pair $(G,H)$ has relative property BS, if and only if fo every overgroup $L$ the pair $(L,G)$ has relative property BS.
+It is possible to consider relative version of the properties appearing in Definition~\ref{Def:FHFA}.%\PH{J'ai mis cela ici, mais on peut y bouger dans la prochaine sous-section.}
+If $G$ is a group, $H$ a subgroup of $G$ and BS one of the property of Definition~\ref{Def:FHFA} defined by ``every action on S-spaces is bounded'', we say that the pair $(G,H)$ has \emph{relative property BS} if for every $G$ action on a S-space, the $H$ orbits are bounded.
+A group $G$ has property BS if and only if for every subgroup $H$ the pair $(G,H)$ has relative property BS and if and only if for every overgroup $L$ the pair $(L,G)$ has relative property BS.
 %
 %
 %
@@ -428,7 +428,7 @@ Then $d_\infty(f,g)\coloneqq\max\setst{i}{f(i)\neq g(i)}$ is an ultrametric on $
 \subsection{Groups acting with bounded orbits on \texorpdfstring{$\mathbf S$}{\textbf{S}}-spaces}
 It is possible to define other properties in the spirit of Definition~\ref{Def:FHFA} for any ``additional structure on metric spaces''.
 In order to give a uniform treatment of all of them, we will use the notion of quasipseudo-metric spaces and the language of category theory.
-A reader unfamiliar with category theory and interested only in one specific structure (as for example Banach spaces and groups acting with bounded orbits on them), might forget all this general considerations and only verify that the arguments of Section~\ref{Section:Proof} apply for their favorite structure.
+A reader unfamiliar with category theory and interested only in one specific structure (as for example Banach spaces and groups acting with bounded orbits on them), might forget all these general considerations and only verify that the arguments of Section~\ref{Section:Proof} apply for their favorite structure.
 %
 %
 \begin{defn}
@@ -440,7 +440,7 @@ A \emph{quasipseudo-metric space} is a set $X$ with a map $d\colon X\times X\to 
 \end{defn}
 %
 %
-If moreover $d(x,y)=d(y,x)$ and $d(x,y)\neq 0$ for $x\neq y$, the map $d$ is a \emph{distance} and $(X,d)$ is a metric space.
+Moreover, if $d(x,y)=d(y,x)$ and $d(x,y)\neq 0$ for $x\neq y$, the map $d$ is a \emph{distance} and $(X,d)$ is a metric space.
 On the other hand, a \emph{ultra-quasipseudo-metric space} is a quasipseudo-metric space $(X,d)$ such that $d$ satisfies the strong triangular inequality.
 A \emph{morphism} (or \emph{short map}) between two quasipseudo-metric spaces $(X_1,d_1)$ and $(X_2,d_2)$ is a distance non-increasing map $f\colon X_1\to X_2$, that is $d_2(f(x),f(y))\leq d_1(x,y)$ for any $x$ and $y$ in $X_1$.
 If $f$ is bijective and distance preserving, then it is an \emph{isomorphism} (or \emph{isometry}).
@@ -479,14 +479,14 @@ A pair $(G,H)$ of a group and a subgroup has \emph{relative property \BS} if for
 %
 %
 All the properties of Definition~\ref{Def:FHFA} are of the form \BS.
-Examples of other interesting properties include looking at $\mathbf{R}$-trees (also called \emph{real trees}) or at (some specific subclass of) Banach spaces.
+Examples of other interesting properties include $\mathbf{R}$-trees (also called \emph{real trees}) or (some specific subclass of) Banach spaces.
 The property F$\mathbf{R}$ of having bounded actions on $\mathbf{R}$-trees is known to be strictly stronger than FA \cite{MR3465847}. Theorem~\ref{Thm:FAFiniteOrbits} holds whenever property FA is replaced by property F$\mathbf{R}$, with a similar proof.
 On the other hand, the property of having bounded orbits for action on Banach spaces satisfy the analog of Theorem~\ref{Thm:Main}, see Theorem~\ref{Thm:Technic}.
 
-An example of an uninteresting property \BS{} is given by taking $\mathbf{S}$ to be category of metric spaces of bounded diameter (together with short maps). Indeed, in this case, any group has \BS.
+An example of an uninteresting property \BS{} is given by taking $\mathbf{S}$ to be the category of metric spaces of bounded diameter (together with short maps). Indeed, in this case, any group has \BS.
 
 The category $\mathbf{QPMet}$ has the advantage (over $\mathbf{Met}$) of behaving more nicely with respects to categorical constructions.
-However, we have\PH{Ajouté cette phrase, le lemme et la preuve. C'est utilisé implicitement dans la preuve de Prop~\ref{Prop:Extension}.}
+However, we have%\PH{Ajouté cette phrase, le lemme et la preuve. C'est utilisé implicitement dans la preuve de Prop~\ref{Prop:Extension}.}
 %
 %
 \begin{lem}\label{Lemma:BergQPMet}
@@ -496,7 +496,7 @@ A group $G$ has property SB (respectively cof~$\neq\omega$) if and only if any $
 One direction is trivial.
 
 For the other direction, let $(X,d)$ be a quasipseudo-metric space on which $G$ acts by isometries.
-Let $d'(x,y)\coloneqq\frac12(d(x,y)+s(y,x)$ be the symmetrization of $d$.
+Let $d'(x,y)\coloneqq\frac12(d(x,y)+d(y,x))$ be the symmetrization of $d$.
 Then the action of $G$ on $X$ is by $d'$-isometries and a subset $Y\subset X$ is bounded for $d$ if and only if it is bounded for $d'$.
 Finally, let $\tilde X\coloneqq X/\sim$ be the quotient of $X$ for the relation $x\sim y$ if $d'(x,y)=0$ and let $\tilde d$ be the quotient of $d'$.
 Then $(\tilde X,\tilde d)$ is a metric space, the action of $G$ passes to the quotient and $G.x$ is $d'$ bounded (hence $d$ bounded) if and only if $G.[x]$ is $\tilde d$ bounded.
@@ -504,7 +504,21 @@ Finally, if $d$ satisfies the strong triangular inequality, then so does $d'$ an
 \end{proof}
 %
 %
-While we will be able to obtain some results for a general qp-metric structure~$\mathbf{S}$, we will sometimes need to restrict ourself to structure with a suitable notion of cartesian product.
+On the other hand, the following result is perhaps more surprising.
+%
+%
+\begin{lem}\GS{Ajouté ici}
+A group $G$ has property SB if and only if any $G$ action on a connected graph has bounded orbits.
+\end{lem}
+\begin{proof}
+The left-to-right implication is clear.
+
+For the other direction, we will use the following characterization property SB due to Cornulier \cite{MR2240370}. A group $G$ has property SB if and only if it has cof~$\neq\omega$ and for every generating set $T$ of $G$ the Calyey graph $\Cayley(G;T)$ is bounded.
+
+Suppose that any $G$ action on a connected graph has bounded orbits. Then $G$ has property FW and hence cof~$\neq\omega$. On the other hand, for every generating set $T$, the group $G$ acts transitively on $\Cayley(G;T)$, which implies that the latter is bounded. By the above characterization, we obtain that $G$ has property SB.
+\end{proof}
+
+While we will be able to obtain some results for a general qp-metric structure~$\mathbf{S}$, we will sometimes need to restrict ourselves to structures with a suitable notion of cartesian product.
 %
 %
 \begin{defn}\label{Def:Cartesian}
@@ -527,19 +541,47 @@ On the other hand, trees do not have cartesian powers.
 %
 %
 \begin{rem}
-In view of Definition~\ref{Def:PropBS} and \ref{Def:Cartesian}, the reader might ask why we are working in $\mathbf{QPMet}$ instead of $\mathbf{Born}$ the category of bornological spaces together with bounded maps.
-The reason behind this is the forthcoming Lemma~\ref{Lemma:InterProd} and its corollaries, which fail for general bornological spaces.\PH{Je pense qu'on peut en rester là et ne pas parler de l'exemple $\{$bornés$\}=\{$finis$\}$.}
+In view of Definition~\ref{Def:PropBS} and \ref{Def:Cartesian}, the reader might ask why we are working in $\mathbf{QPMet}$ instead of $\mathbf{Born}$, the category of bornological spaces together with bounded maps.
+The reason behind this is the forthcoming Lemma~\ref{Lemma:InterProd} and its corollaries, which fail for general bornological spaces.%\PH{Je pense qu'on peut en rester là et ne pas parler de l'exemple $\{$bornés$\}=\{$finis$\}$.}
 \end{rem}
 %
 %
-We conclude this section by a remark\PH{Peut-être à enlever de l'article, non ? Mais à garder pour ta thèse ?} on a variation of Definition~\ref{Def:FHFA}.
+We conclude this section by a remark\PH{Peut-être à enlever de l'article, non ? Mais à garder pour ta thèse ?}\GS{A voir, de manière générale j'aime assez quand on traite les questions qui apparaissent raisonnablement... A toi de voir !} on a variation of Definition~\ref{Def:FHFA}.
 One might wonder what happens if in Definition~\ref{Def:FHFA} we replace the requirement of having bounded orbits by having uniformly bounded orbits.
-It turns out that this is rather uninteresting as a group $G$ is trivial if and only if any $G$-action on a metric space (respectively on an Hilbert space, on a connected median graph, on a tree or on an ultrametric space) has uniformly bounded orbits.
-Indeed, if $G$ is non-trivial, then for the action of $G$ on the Hilbert space $\ell^2(G)$ the orbit of $n\cdot \delta_g$ has diameter $n\sqrt2$.
-For a tree (and hence also for a connetected median graph), one may look at the tree $T$ obtained by taking a root $r$ on which we glue an infinite ray for each elements of $G$. Then $G$ naturally acts on $T$ by permuting the rays. The orbits for this action are the $\mathcal L_n=\setst{v}{d(v,r)=n}$ which have diameter $2n$.
+It turns out that this is rather uninteresting, as a group $G$ is trivial if and only if any $G$-action on a metric space (respectively on an Hilbert space, on a connected median graph, on a tree or on an ultrametric space) has uniformly bounded orbits.
+Indeed, if $G$ is non-trivial, then, for the action of $G$ on the Hilbert space $\ell^2(G)$ the orbit of $n\cdot \delta_g$ has diameter $n\sqrt2$.
+For a tree (and hence also for a connected median graph), one may look at the tree $T$ obtained by taking a root $r$ on which we glue an infinite ray for each element of $G$. Then $G$ naturally acts on $T$ by permuting the rays. The orbits for this action are the $\mathcal L_n=\setst{v}{d(v,r)=n}$ which have diameter $2n$.
 Finally, it is possible to put an ultradistance on the vertices of $T$ by  $d_\infty(x,y)\coloneqq\max\{d(x,r),d(y,r)\}$ if $x\neq y$. Then the orbits are still the~$\mathcal L_n$, but this time with diameter $n$.
 %
 %
+%
+\GS{Ajouté ici?}
+\paragraph{Groups acting with fixed point on \texorpdfstring{$\mathbf S$}{\textbf{S}}-spaces}%\PH{J'ai mis cela ici, à voir si on en fait quelque chose.}
+Some of the properties that are of interest for us have been historically defined via the existence of a fixed point for some action. More generally, we say that a group $G$ has \emph{property F$\mathbf S$} if any $G$ action on a $\mathbf S$-space has a fixed point.
+
+Since our actions are by isometries, property F$\mathbf S$ implies property \BS. The other implication holds as soon as we have a suitable notion of the center of a (non-empty) bounded subset $X$.
+For a large class of metric spaces, this is provided by the following result of Bruhat and Tits:
+%
+%
+\begin{prop}\label{Proposition:Mediane}
+Let $(X,d)$ be a complete metric space such that the following two conditions are satisfied:
+\begin{enumerate}
+\item For all $x$ and $y$ in $X$, there exists a unique $m\in X$ (the middle of $[x,y]$) such that $d(x,m)=d(y,m)=\frac12d(x,y)$;
+\item For all $x$, $y$ and $z$ in $X$, if $m$ is the middle of $[y,z]$ we have the median's inequality  $2d(x,m)^2+\frac12d(y,z)^2\leq d(x,y)^2+d(x,z)^2$.
+\end{enumerate}
+Then if $G$ is a group acting by isometries on $X$ with a bounded orbit, it has a fixed point.
+\end{prop}
+%
+%
+Exemples of complete metric spaces satisfying Proposition~\ref{Proposition:Mediane} include Hilbert spaces, Bruhat-Tits Buildings, Hadamard spaces (i.e. complete CAT(0) spaces), trees and $\R$-trees, with the caveat that for ($\R$-)trees, the fixed point is either a vertex or the middle of an edge.
+See~\cite[Chapter 3.b]{MR1023471} and the references therein for more on this subject.
+On the other hand, \cite[Lemma 2.2.7]{Bekka2008} gives a simple proof of the existence of a center for bounded subsets of Hilbert spaces, and more generally of reflexive Banach spaces.
+%This is for example the case for (real or complex) Hilbert spaces \cite[Lemma 2.2.7]{Bekka2008} as well as for reflexive Banach spaces (the proof of \cite[Lemma 2.2.7]{Bekka2008} applies mutatis mutandis)\PH{Vérifier}. On the other hand, property FA is usually defined as ``any action without inversion on a tree as a fixed point'', which is equivalent to ``any action on a tree either fixes a point or fixes the middle of an edge''. It is easy exercise to prove that if an action of a group on a tree has one bounded orbit, then it fixes a point or the middle of an edges.
+
+For action on (ultra)-metric spaces or on connected median graphs, F$\mathbf S$ is stricly stronger than \BS. Indeed, this trivially follows from the action by rotation of $C_4$ on the square graph.
+However,  by \cite{MR1663779, Cornulier2013} if a group $G$ acts on a connected median graph with a bounded orbit, then it has a finite orbit.\\[3ex]
+
+
 %
 %
 %
@@ -575,17 +617,27 @@ We have $H\cong G/N$. If $H$ acts on some $\mathbf{S}$-space $X$ with an unbound
 %
 \begin{lem}\label{Lemma:InterProd}
 Let $G$ be a group and $A$ an $B$ be two subgroups such that $G=AB$.
-If both $(G,A)$ and $(G,B)$ have relative property \BS, then $G$ has property \BS.
+If both $(G,A)$ and $(G,B)$ have relative property \BS, then $G$ has property \BS.\GS{Pourquoi utiliser rel prop \BS et pas directement $A,B$ possèdent \BS?}
 \end{lem}
 \begin{proof}
 Let $X$ be a $\mathbf{S}$-space and $x$ be an element of $X$.
 Let $D_1$ be the diameter of $B.x$ and $D_2$ the diameter of $A.x$. By assumption, they both are finite.
 Since $A$ acts by isometries, all the $a.Bx$ have diameter $D_1$.
-Let $y$ be an element of $G.x$. There exists $a\in A$ such that $y$ belongs to $a.Bx$. Since $1$ belongs to $B$, $y$ is at distance at most $D_1$ of $a.x$. Altogether we have that the diameter of $G.x$ is bounded above by $2D_1+D_2$.
+Let $y$ be an element of $G.x$. There exists $a\in A$ such that $y$ belongs to $a.Bx$. Since $1$ belongs to $B$, $y$ is at distance at most $D_1$ of $a.x$. Altogether we have that the diameter of $G.x$ is bounded above by $2D_1+D_2$. \end{proof}
+%
+\begin{lem}\label{Lemma:InterProd}
+Let $G$ be a group and $A$ an $B$ be two subgroups such that $G=AB$.
+If both $A$ and $B$ have property \BS, then $G$ has property \BS.\GS{Pourquoi utiliser rel prop \BS et pas directement $A,B$ possèdent \BS?}
+\end{lem}
+\begin{proof}
+Let $X$ be a $\mathbf{S}$-space and $x$ be an element of $X$.
+Let $D_1$ be the diameter of $A.x$ and $D_2$ the diameter of $B.x$. By assumption, they both are finite.
+Since $A$ acts by isometries, all the $a.Bx$ have diameter $D_2$.
+Let $y$ be an element of $G.x$. There exists $a \in A$ and $b \in B$ such that $y = ab.x$ and then $d(x,y) \leq d(x, a.x) + d(a.x, ab.x) \leq D_1 + D_2$.  Therefor, the diameter of $G.x$ is finite.
 \end{proof}
 %
 %
-By combining Lemmas~\ref{Lemma:Quotient} and~\ref{Lemma:InterProd}, we obtain the following three corollaries on direct, semi-direct and wreath products.\PH{J'ai mis trois corollaires disctinct car cela me semblait moins indigeste. Tu trouveras dans le fichier TeX la version avec un seul gros corollaire.}
+By combining Lemmas~\ref{Lemma:Quotient} and~\ref{Lemma:InterProd}, we obtain the following three corollaries on direct, semi-direct and wreath products.%\PH{J'ai mis trois corollaires disctinct car cela me semblait moins indigeste. Tu trouveras dans le fichier TeX la version avec un seul gros corollaire.}
 %\PH{J'ai tout mis en un corollaire, mais on peut choisir de séparer, ou de ne pas tout dire comme certains points sont redondants. Les ``anciens résultats sont dans le fichier TeX''}
 %
 %
@@ -655,7 +707,7 @@ If both $G$ and $H$ have property \BS{} and $X$ is finite, then $G\wr_X H$ has p
 %
 %
 When $\mathbf{S}$ has a suitable notion of quotients (by a group of isometries), it is possible to obtain a strong version of Lemmas~\ref{Lemma:Quotient} and~\ref{Lemma:InterProd}.
-Here is the corresponding result for property SB and cof~$\neq\omega$.\PH{Je n'ai pas mis l'énoncé général, car les autres espaces qui nous intéressent ne sont pas stable par quotients.}
+Here is the corresponding result for property SB and cof~$\neq\omega$.%\PH{Je n'ai pas mis l'énoncé général, car les autres espaces qui nous intéressent ne sont pas stable par quotients.}
 %
 %
 \begin{prop}\label{Prop:Extension}
@@ -669,7 +721,7 @@ One direction is simply Lemma~\ref{Lemma:Quotient} and the definition of relativ
 On the other hand, let $(X,d)$ be a quasipseudo-metric space on which $G$ acts by isometries and let $x$ be an element of $X$.
 Let $\setst{g_i}{i\in I}$ a transversal for $N$, that is $H\cong\{g_iN\}$.
 By assumption, $N.x$ is bounded of diameter $D_1$ and for any $i\in I$ the subset $g_iN.x$ of $X$ has also diameter $D_1$.
-Since $N$ is a subgroup of isometries of $X$, the map $d'\colon X/N\times X/N\to\R$ defined by $d'([x],[y])\coloneqq\inf\setst{d(x',y')}{x'\in N.x,y'\in N.y}$ is the quotient quasipseudo-distance\PH{En général, pour $X/\sim$, $d'$ ne satisfait pas l'inégalité triangulaire, mais c'est vrai pour $X/N$. Est-ce qu'il faut expliciter ?} on $X/N$.
+Since $N$ is a subgroup of isometries of $X$, the map $d'\colon X/N\times X/N\to\R$ defined by $d'([x],[y])\coloneqq\inf\setst{d(x',y')}{x'\in N.x,y'\in N.y}$ is the quotient quasipseudo-distance on $X/N$. The triangle inequality stays not true in general for a quotient of $X$, but we leave it to the reader to verifiy that it is true in this case. \GS{Une remarque comme ça ?}%\PH{En général, pour $X/\sim$, $d'$ ne satisfait pas l'inégalité triangulaire, mais c'est vrai pour $X/N$. Est-ce qu'il faut expliciter ?}
 Moreover, if $d$ satisfied the strong triangle inequality, then so does $d'$.
 The quotient action of $H\cong G/N$ on $X/N$ is by isometries and the diameter of $H.xN$ is bounded, say by $D_2$.
 In particular, for any $i$ and $j$ in $I$, the distance between the subsets $g_iN.x$ and $g_jN.x$ of $X$ is bounded by $D_2$.
@@ -681,7 +733,7 @@ Altogether, we obtain that the diameter of $G.x$ is bounded by $2D_1+D_2+1$.
 Since the square graph, which is not median, is a quotient of the $2$-regular infinite tree by a subgroup of isometries, the proof of Proposition~\ref{Prop:Extension} does not carry over for properties FW and FA.
 Similarly, the quotient of $\R$ by the action of $\Z/2\Z$ given by $x\mapsto-x$ is not an Hilbert space and hence the proof of Proposition~\ref{Prop:Extension} does not apply to property FH.
 However, the statement of Proposition~\ref{Prop:Extension} (stability under extension) remains true for properties FH, FW and FA.
-For property FH this is an exercice using the fixed-point definition, for property FW and FA, see \cite{Cornulier2013} and \cite{MR0476875}.\PH{Ajouté ce paragraphe}
+For property FH this is an exercice using the fixed-point definition, for property FW and FA, see \cite{Cornulier2013} and \cite{MR0476875}.%\PH{Ajouté ce paragraphe}
 
 We now state a result on infinite direct sums.
 %
@@ -734,7 +786,7 @@ Let $G$ and $H$ be two groups with $G$ non-trivial and let $X$ be a set on which
 If $G\wr_XH$ has \BS, then $X$ is finite.
 \end{lem}
 \begin{proof}
-We will prove that if $X$ is infinte, then $G\wr_XH$ does not have property FW. Suppose that $X$ is infinite.
+We will prove that if $X$ is infinite, then $G\wr_XH$ does not have property FW. Suppose that $X$ is infinite.
 The group $\bigoplus_XG$ acts coordinatewise on  $\bigsqcup_XG$: the group $G_x$ acting by left multiplication on $G_x$ and trivially on $G_y$ for $y\neq x$. On the other hand, $H$ acts on $\bigsqcup_XG$ by permutation of the factors.
 Altogether we have an action of $G\wr_XH$ on $\bigsqcup_XG$ and hence on the median graph $\powerset{\bigsqcup_XG}$.
 Let $\mathbf 1\coloneqq\bigcup_{x\in X} 1_{G}$ be the subset of $\powerset{\bigsqcup_XG}$ consisting of the identity elements of all the copies of $G$.
@@ -742,7 +794,7 @@ Since every element of $\bigoplus_XG$ has only a finite number of non-trivial co
 
 Let $I=\{i_1,i_2,\dots\}$ be a countable subset of $X$ and for every $i\in I$, choose a non-trivial $g_i\in G_{i}$.
 Then the orbit of the vertex $\mathbf 1$ contains the point $\{g_{i_1},\dots, g_{i_n}\}\cup\bigl(\bigcup_{j>n} 1_{G_{i_j}}\bigr)\cup\bigl(\bigcup_{x\notin I} 1_{G_{x}}\bigr)$ which is at distance $2n$ of~$\mathbf 1$.
-Therefore the action of $G\wr_XH$ on the connected component of~$\mathbf 1$ has an unbounded orbit and then $G\wr_XH$ does not have property FW.
+Therefore, the action of $G\wr_XH$ on the connected component of~$\mathbf 1$ has an unbounded orbit and then $G\wr_XH$ does not have property FW.
 \end{proof}
 %
 %
@@ -827,7 +879,7 @@ As for Lemma~\ref{Lemma:Cof}, it is also possible to prove it using the characte
 %
 %
 \begin{thm}
-Let $G$ and $H$ be two groups with $G$ non-trivial and let $X$ a set on which $H$ acts. Then the wreath product $G \wr_X H$ has cof~$\neq\omega$ if and only if $G$ and $H$ have cof~$\neq\omega$ and $H$ acts on $X$ with finitely many orbits.
+Let $G$ and $H$ be two groups with $G$ non-trivial and let $X$ be a set on which $H$ acts. Then the wreath product $G \wr_X H$ has cof~$\neq\omega$ if and only if $G$ and $H$ have cof~$\neq\omega$ and $H$ acts on $X$ with finitely many orbits.
 \end{thm}
 \begin{proof}
 By Corollary~\ref{Cor:Wreath} and Lemma~\ref{Lemma:Cof} we already know that if $G \wr_X H$ has cof~$\neq\omega$, then $H$ has cof~$\neq\omega$ and it acts on $X$ with finitely many orbits.
@@ -1002,47 +1054,4 @@ Jean-Pierre Serre.
 %
 %
 %
-\clearpage
-\paragraph{Groups acting with fixed point on \texorpdfstring{$\mathbf S$}{\textbf{S}}-spaces}\PH{J'ai mis cela ici, à voir si on en fait quelque chose.}
-Some of the properties that are of interest for us have been historically defined via the existence of a fixed point for some action. More generally, we say that a group $G$ has \emph{property F$\mathbf S$} if any $G$ action on a $\mathbf S$-space has a fixed point.
-
-Since our actions are by isometries, property F$\mathbf S$ implies property \BS. The other implication holds as soon as we have a suitable notion of the center of a (non-empty) bounded subset $X$.
-For a large class of metric spaces, this is provided by the following result of Bruhat and Tits:
-%
-%
-\begin{prop}\label{Proposition:Mediane}
-Let $(X,d)$ be a complete metric space such that the following two conditions are satisfied:
-\begin{enumerate}
-\item For all $x$ and $y$ in $X$, there exists a unique $m\in X$ (the middle of $[x,y]$) such that $d(x,m)=d(y,m)=\frac12d(x,y)$;
-\item For all $x$, $y$ and $z$ in $X$, if $m$ is the middle of $[y,z]$ we have the median's inequality  $2d(x,m)^2+\frac12d(y,z)^2\leq d(x,y)^2+d(x,z)^2$.
-\end{enumerate}
-Then if $G$ is a group acting by isometries on $X$ with a bounded orbit, it has a fixed point.
-\end{prop}
-%
-%
-Exemples of complete metric spaces satisfying Proposition~\ref{Proposition:Mediane} include Hilbert spaces, Bruhat-Tits Buildings, Hadamard spaces (i.e. complete CAT(0) spaces), trees and $\R$-trees, with the caveat that for ($\R$-)trees, the fixed point is either a vertex or the middle of an edge.
-See~\cite[Chapter 3.b]{MR1023471} and the references therein for more on this subject.
-On the other hand, \cite[Lemma 2.2.7]{Bekka2008} gives a simple proof of the existence of a center for bounded subsets of Hilbert spaces, and more generally of reflexive Banach spaces.
-%This is for example the case for (real or complex) Hilbert spaces \cite[Lemma 2.2.7]{Bekka2008} as well as for reflexive Banach spaces (the proof of \cite[Lemma 2.2.7]{Bekka2008} applies mutatis mutandis)\PH{Vérifier}. On the other hand, property FA is usually defined as ``any action without inversion on a tree as a fixed point'', which is equivalent to ``any action on a tree either fixes a point or fixes the middle of an edge''. It is easy exercise to prove that if an action of a group on a tree has one bounded orbit, then it fixes a point or the middle of an edges.
-
-For action on (ultra)-metric spaces or on connected median graphs, F$\mathbf S$ is stricly stronger than \BS. Indeed, this trivially follows from the action by rotation of $C_4$ on the square graph.
-However,  by \cite{MR1663779, Cornulier2013} if a group $G$ acts on a connected median graph with a bounded orbit, then it has a finite orbit.\\[3ex]
-
-
-\todo[inline]{Un autre truc qu'on peut décider d'ajouter (juste après le lemme~\ref{Lemma:BergQPMet}) ou pas}
-On the other hand, the following result is perhaps more surprising.
-%
-%
-\begin{lem}
-A group $G$ has property SB if and only if any $G$ action on a connected graph has bounded orbits.
-\end{lem}
-\begin{proof}
-The left-to-right implication is clear.
-
-For the other direction, we will use the following characterization property SB due to Cornulier \cite{MR2240370}. A group $G$ has property SB if and only if it has cof~$\neq\omega$ and for every generating set $T$ of $G$ the Calyey graph $\Cayley(G;T)$ is bounded.
-
-Suppose that any $G$ action on a connected graph has bounded orbits. Then $G$ has property FW and hence cof~$\neq\omega$. On the other hand, for every generating set $T$, the group $G$ acts transitively on $\Cayley(G;T)$, which implies that the latter is bounded. By the above characterization, we obtain that $G$ has property SB.
-\end{proof}
-
-
 \end{document}
